--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "grunt-karma": "^0.10.1",
     "grunt-newer": "^0.8.0",
     "grunt-ng-annotate": "^0.8.0",
+    "grunt-protractor-runner": "^1.2.1",
     "grunt-svgmin": "^2.0.0",
     "grunt-usemin": "^2.6.2",
     "grunt-wiredep": "^2.0.0",
@@ -32,6 +33,7 @@
     "karma-jasmine": "^0.3.5",
     "karma-phantomjs-launcher": "^0.1.4",
     "load-grunt-tasks": "^1.0.0",
+    "protractor": "^1.6.1",
     "time-grunt": "^1.0.0"
   },
   "engines": {
