--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,13 @@ before_script:
   - 'bower install'
   - 'grunt serve > /dev/null &'
   - 'sleep 3'
+  - 'export DISPLAY=:99.0'
+  - 'sh -e /etc/init.d/xvfb start'
+  - './node_modules/protractor/bin/webdriver-manager update'
+  - nohup bash -c "./node_modules/protractor/bin/webdriver-manager start 2>&1 &"
+  - 'sleep 3'
 
 script:
   - 'grunt test'
+  - 'node_modules/.bin/protractor test/protractor.conf.js --browser=firefox'
 
