--- a/.travis.yml
+++ b/.travis.yml
@@ -17,3 +17,6 @@ script:
   - 'grunt test'
   - 'node_modules/.bin/protractor test/protractor.conf.js --browser=firefox'
 
+after_sucess:
+  - coveralls
+
