--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "grunt-filerev": "^2.1.2",
     "grunt-google-cdn": "^0.4.3",
     "grunt-karma": "^0.10.1",
+    "grunt-karma-coveralls": "^2.5.3",
     "grunt-newer": "^0.8.0",
     "grunt-ng-annotate": "^0.8.0",
     "grunt-protractor-runner": "^1.2.1",
@@ -30,6 +31,7 @@
     "jasmine-core": "^2.2.0",
     "jshint-stylish": "^1.0.0",
     "karma": "^0.12.31",
+    "karma-coverage": "^0.2.7",
     "karma-jasmine": "^0.3.5",
     "karma-phantomjs-launcher": "^0.1.4",
     "load-grunt-tasks": "^1.0.0",
