--- a/bower.json
+++ b/bower.json
@@ -9,6 +9,8 @@
     "angular-route": "^1.3.0",
     "angular-sanitize": "^1.3.0",
     "angular-touch": "^1.3.0",
+    "angular-translate": "~2.6.0",
+    "angular-translate-loader-static-files": "~2.6.0",
     "underscore": "~1.7.0"
   },
   "devDependencies": {
